# HomeworkOOP

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/: category.py  main.py  product.py
tests/: conftest.py  test_category.py  test_product.py
