[project]
name = "homeworkoop"
version = "0.1.0"
description = ""
authors = [
    {name = "Diana Kozlova",email = "dianahaseo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.19.0"
black = "^25.12.0"
isort = "^7.0.0"

[tool.black]
line-length = 119
exclude = '\.git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'